@@ -1,3 +1,8 @@
+2006-08-04 Joerg Wunsch <j@uriah.heep.sax.de>
+
+	* avrdude.conf.in: Add parallel programming definitions for
+	the ATmega8/48/88/168.
+
 2006-07-22 Joerg Wunsch <j@uriah.heep.sax.de>
 
 	* avrdude.conf.in: Add the ATtiny11, an HVSP-only device.
